# track_gardener

./: .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: test_and_deploy.yaml
configuration/: index.html
docs/: about.md  conf.py  index.md  index.rst  initialize.md
docs/own_data/: configuration.md
docs/stylesheets/: extra.css
example_data/: Fluo-N2DL-HeLa-01_config.yaml  Fluo-N2DL-HeLa-01_sample.db
example_data/Fluo-N2DL-HeLa-01_sample.zarr/images/: zarr.json
example_notebooks/: gardenerDB_to_geff_demo.ipynb  segm_to_gardenerDB_demo.ipynb
examples/: export_to_geff_demo.ipynb  geff_and_segm_to_gardenerDB_demo.ipynb  geff_and_segmentation_to_gardener_demo.ipynb  import_to_TrackGardener_db_demo.ipynb  segm_to_gardenerDB_demo.ipynb  widget_test.ipynb
examples/Fluo-N2DL-HeLa-01_images.zarr/images/: zarr.json
examples/TrackGardener/: Fluo-N2DL-HeLa-01_config.yaml  gardenerDB_to_geff_demo.ipynb
examples/TrackGardener/Fluo-N2DL-HeLa-01_sample.geff/: .zattrs
examples/example_conversions/labels_and_geff_to_TrackGardener/: Fluo-N2DL-HeLa-01_config_geff.yaml  Fluo-N2DL-HeLa-01_conversion_result.db  geff_and_segm_to_gardenerDB_demo.ipynb
examples/example_conversions/labels_as_trackID_to_TrackGardener/: segm_to_gardenerDB_demo.ipynb
initialize/: index.html
search/: search_index.json
src/track_gardener/: __init__.py  napari.yaml
t_gardener/_tests/: test_dock_widget.py  test_function.py  test_reader.py  test_writer.py
usage/: index.html
(+168 files in other folders)
