[metadata]
name = track_gardener
version = 0.0.1
author = Kasia Kedziora
author_email = kasia.m.kedziora@gmail.com
license = BSD-3-Clause
url = https://github.com/fjorka/track_gardener
description = A plugin with tools for manual correction of tracking data.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
project_urls =
    Bug Tracker = https://github.com/fjorka/track_gardener/issues
    Documentation = https://github.com/fjorka/track_gardener#README.md
    Source Code = https://github.com/fjorka/track_gardener
    User Support = https://github.com/fjorka/track_gardener/issues

[options]
packages = find:
python_requires = >=3.7

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy


[options.entry_points] 
napari.plugin = 
    track_gardener = t_gardener
